GETP-56 feat: 서비스 약관 동의 API 구현